--- a/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
+++ b/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
@@ -232,6 +232,12 @@
      "shell.execute_reply": "2022-05-29T18:44:55.327279Z",
      "shell.execute_reply.started": "2022-05-29T18:44:49.864676Z"
     },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated gain required for threshold vs frequency deviation from the Bragg condition for index modulation",
+      "name": "Kogelnik5c"
+     }
+    },
     "tags": []
    },
    "outputs": [
@@ -294,7 +300,7 @@
     ":width: 100%\n",
     ":align: center\n",
     "\n",
-    "Plot of the gain required for threshold vs frequency deviation from the Bragg condition for an index periodicity. Only half of the spectrum is shown because of symmetry. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
+    "Plot of the gain required for threshold vs frequency deviation from the Bragg condition for an index modulation. Only half of the spectrum is shown because of symmetry. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
     "```"
    ]
   },
@@ -319,6 +325,12 @@
      "iopub.status.idle": "2023-03-19T22:08:49.906345Z",
      "shell.execute_reply": "2023-03-19T22:08:49.905230Z",
      "shell.execute_reply.started": "2023-03-19T22:08:48.251158Z"
+    },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation",
+      "name": "Kogelnik7c"
+     }
     },
     "tags": []
    },
@@ -367,7 +379,7 @@
     ":width: 100%\n",
     ":align: center\n",
     "\n",
-    "Plot of the gain required for threshold vs frequency deviation from the Bragg condition for a gain periodicity. Only half of the spectrum is shown because of symmetry. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
+    "Plot of the DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation. Only half of the spectrum is shown because of symmetry. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
     "```"
    ]
   },
