--- a/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
+++ b/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
@@ -395,6 +395,12 @@
      "shell.execute_reply": "2023-03-19T21:59:47.777597Z",
      "shell.execute_reply.started": "2023-03-19T21:59:47.423571Z"
     },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated gain at threshold vs coupling strength for various modes",
+      "name": "Kogelnik8c"
+     }
+    },
     "tags": []
    },
    "outputs": [
@@ -456,6 +462,12 @@
      "iopub.status.idle": "2023-03-19T21:56:54.363097Z",
      "shell.execute_reply": "2023-03-19T21:56:54.362792Z",
      "shell.execute_reply.started": "2023-03-19T21:56:52.397156Z"
+    },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated gain at threshold vs coupling strength for various modes",
+      "name": "Kogelnik9c"
+     }
     },
     "tags": []
    },
@@ -519,6 +531,12 @@
      "iopub.status.idle": "2023-03-18T22:57:26.573989Z",
      "shell.execute_reply": "2023-03-18T22:57:26.573443Z",
      "shell.execute_reply.started": "2023-03-18T22:57:26.255968Z"
+    },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated gain at threshold vs coupling strength for various modes",
+      "name": "Kogelnik10c"
+     }
     },
     "tags": []
    },
@@ -597,6 +615,12 @@
      "shell.execute_reply": "2023-03-18T23:13:56.016146Z",
      "shell.execute_reply.started": "2023-03-18T23:13:55.723866Z"
     },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated spatial intensity distribution for the first three modes",
+      "name": "Kogelnik11ac"
+     }
+    },
     "tags": []
    },
    "outputs": [
@@ -641,6 +665,12 @@
      "iopub.status.idle": "2023-03-18T23:11:16.644434Z",
      "shell.execute_reply": "2023-03-18T23:11:16.643476Z",
      "shell.execute_reply.started": "2023-03-18T23:11:16.428183Z"
+    },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated spatial intensity distribution for the first three modes",
+      "name": "Kogelnik11bc"
+     }
     },
     "tags": []
    },
@@ -704,6 +734,12 @@
      "shell.execute_reply": "2023-03-18T23:12:16.176121Z",
      "shell.execute_reply.started": "2023-03-18T23:12:15.947304Z"
     },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated spatial intensity distribution for the first three modes",
+      "name": "Kogelnik11cc"
+     }
+    },
     "tags": []
    },
    "outputs": [
@@ -764,6 +800,12 @@
      "iopub.status.idle": "2023-03-18T23:14:50.534846Z",
      "shell.execute_reply": "2023-03-18T23:14:50.533500Z",
      "shell.execute_reply.started": "2023-03-18T23:14:50.279189Z"
+    },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated spatial intensity distribution for the first three modes",
+      "name": "Kogelnik11dc"
+     }
     },
     "tags": []
    },
@@ -842,6 +884,12 @@
      "shell.execute_reply": "2023-03-18T22:47:52.926976Z",
      "shell.execute_reply.started": "2023-03-18T22:47:52.690142Z"
     },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated spatial intensity distribution for the first three modes at  L / 2 =1",
+      "name": "Kogelnik12bc"
+     }
+    },
     "tags": []
    },
    "outputs": [
@@ -893,22 +941,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f494c995-7e6e-405a-8880-a8110de5eb96",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "```{figure} images/Kogelnik12c.png\n",
-    ":name: Kogelnik12c\n",
-    ":alt: spatial intensity distribution \n",
-    ":align: center\n",
-    "\n",
-    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =2$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "1b007dff-8a5f-41a5-82aa-fc6990c7e648",
@@ -919,6 +951,12 @@
      "iopub.status.idle": "2023-03-18T23:20:24.999853Z",
      "shell.execute_reply": "2023-03-18T23:20:24.999331Z",
      "shell.execute_reply.started": "2023-03-18T23:20:24.643009Z"
+    },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated spatial intensity distribution for the first three modes at  L / 2 =2",
+      "name": "Kogelnik12cc"
+     }
     },
     "tags": []
    },
@@ -954,6 +992,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f494c995-7e6e-405a-8880-a8110de5eb96",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "```{figure} images/Kogelnik12c.png\n",
+    ":name: Kogelnik12c\n",
+    ":alt: spatial intensity distribution \n",
+    ":align: center\n",
+    "\n",
+    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =2$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "1b228de6-f5dc-451c-b735-4a0442795dd3",
@@ -964,6 +1018,12 @@
      "iopub.status.idle": "2023-03-18T23:19:38.772665Z",
      "shell.execute_reply": "2023-03-18T23:19:38.772665Z",
      "shell.execute_reply.started": "2023-03-18T23:19:38.550270Z"
+    },
+    "mystnb": {
+     "figure": {
+      "caption": "Calculated spatial intensity distribution for the first three modes at  L / 2 =10",
+      "name": "Kogelnik12dc"
+     }
     },
     "tags": []
    },
