--- a/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
+++ b/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
@@ -11,7 +11,8 @@
     "# Coupled‐Wave Theory of Distributed Feedback Lasers\n",
     "\n",
     "This page comprises simulations from the manuscript H. Kogelnik and C. V. Shank, *Coupled‐Wave Theory of Distributed Feedback Lasers*. Journal of Applied Physics, **43** (1972) 2327–2335. [doi:10.1063/1.1661499](https://doi.org/10.1063/1.1661499)\n",
-    "\n"
+    "\n",
+    "We compare the different simulations in the paper with our code."
    ]
   },
   {
@@ -42,7 +43,7 @@
    "source": [
     "## Dispersion diagram for index modulation for various gain to coupling parameter ratios\n",
     "\n",
-    "{numref}`Kogelnik1` calculates the dispersion diagram for index modulation for various gain ($\\alpha_o$) to coupling ($\\kappa$) parameter ratios. In case of index modulation we have that $\\kappa= \\pi n_1/\\lambda_o$. We observe that the calculated result fits the result from {cite:p}`kogelnikCoupledWaveTheory1972`, as can be seen in {numref}`Kogelnik2`."
+    "We calculate below the dispersion diagram for index modulation for various gain ($\\alpha_o$) to coupling ($\\kappa$) parameter ratios. In case of index modulation we have that $\\kappa= \\pi n_1/\\lambda_o$. We observe that the calculated result fits the result from {cite:p}`kogelnikCoupledWaveTheory1972`, as can be seen in {numref}`Kogelnik2`."
    ]
   },
   {
@@ -131,7 +132,7 @@
     "## Dispersion diagram for gain modulation for various gain to coupling parameter ratios\n",
     "\n",
     "\n",
-    "{numref}`Kogelnik3` calculates the dispersion diagram for index modulation for various gain ($\\alpha_o$) to coupling ($\\kappa$) parameter ratios. In case of index modulation we have that $\\kappa= \\frac{1}{2} j \\alpha_1$. We observe that the calculated result fits {numref}`Kogelnik4`.\n"
+    "We calculate below the dispersion diagram for index modulation for various gain ($\\alpha_o$) to coupling ($\\kappa$) parameter ratios. In case of index modulation we have that $\\kappa= \\frac{1}{2} j \\alpha_1$. We observe that the calculated result fits {numref}`Kogelnik4`.\n"
    ]
   },
   {
