--- a/NanoimprintedDFB.ipynb
+++ b/NanoimprintedDFB.ipynb
@@ -13,9 +13,7 @@
     "\n",
     "Iakov Goldberg, Nirav Annavarapu, Simon Leitner, Karim Elkhouly, Fei Han, Tibor Kuna, Weiming Qiu, Cedric Rolin, Jan Genoe, Robert Gehlhaar and Paul Heremans, *\"Multimode Lasing in All-Solution-Processed UV-Nanoimprinted Distributed Feedback MAPbI{sub}`3` Perovskite Waveguides\"*, submitted manuscript\n",
     "\n",
-    "The calculation of the modes is done in accordance to {cite:p}`kogelnikCoupledWaveTheory1972`. It should be note however that in {cite:p}`kogelnikCoupledWaveTheory1972` the variation of the refractive index, in this case the refractive index of the mode, as a function of the distance coordinate z is described as:\n",
-    "\n",
-    "The dashed lines are the experimental lasing lines. \n"
+    "The calculation of the modes is done in accordance to {cite:p}`kogelnikCoupledWaveTheory1972`. "
    ]
   },
   {
