--- a/_sources/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
+++ b/_sources/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "## Dispersion diagram for index modulation for various gain to coupling parameter ratios\n",
     "\n",
-    "We calculate below the dispersion diagram for index modulation for various gain ($\\alpha_o$) to coupling ($\\kappa$) parameter ratios. In case of index modulation we have that $\\kappa= \\pi n_1/\\lambda_o$. We observe that the calculated result fits the result from {cite:p}`kogelnikCoupledWaveTheory1972`, as can be seen in {numref}`Kogelnik2`."
+    "{numref}`Kogelnik1` calculates the dispersion diagram for index modulation for various gain ($\\alpha_o$) to coupling ($\\kappa$) parameter ratios. In case of index modulation we have that $\\kappa= \\pi n_1/\\lambda_o$. We observe that the calculated result fits the result from {cite:p}`kogelnikCoupledWaveTheory1972`, as can be seen in {numref}`Kogelnik2`."
    ]
   },
   {
@@ -118,8 +118,10 @@
     ":width: 100%\n",
     ":align: center\n",
     "\n",
-    "Dispersion diagram for index modulation for various gain to coupling parameter ratios from {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Dispersion diagram for index modulation for various gain to coupling parameter ratios \n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -132,7 +134,7 @@
     "## Dispersion diagram for gain modulation for various gain to coupling parameter ratios\n",
     "\n",
     "\n",
-    "We calculate below the dispersion diagram for index modulation for various gain ($\\alpha_o$) to coupling ($\\kappa$) parameter ratios. In case of index modulation we have that $\\kappa= \\frac{1}{2} j \\alpha_1$. We observe that the calculated result fits {numref}`Kogelnik4`.\n"
+    "{numref}`Kogelnik3` calculates the dispersion diagram for index modulation for various gain ($\\alpha_o$) to coupling ($\\kappa$) parameter ratios. In case of index modulation we have that $\\kappa= \\frac{1}{2} j \\alpha_1$. We observe that the calculated result fits {numref}`Kogelnik4`.\n"
    ]
   },
   {
@@ -207,8 +209,10 @@
     ":width: 100%\n",
     ":align: center\n",
     "\n",
-    "Dispersion diagram for gain modulation for various gain to coupling parameter ratios from {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Dispersion diagram for gain modulation for various gain to coupling parameter ratios\n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -301,8 +305,10 @@
     ":width: 100%\n",
     ":align: center\n",
     "\n",
-    "Plot of the gain required for threshold vs frequency deviation from the Bragg condition for an index modulation. Only half of the spectrum is shown because of symmetry. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the gain required for threshold vs frequency deviation from the Bragg condition for an index modulation. Only half of the spectrum is shown because of symmetry. \n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -380,8 +386,10 @@
     ":width: 100%\n",
     ":align: center\n",
     "\n",
-    "Plot of the DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation. Only half of the spectrum is shown because of symmetry. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation. Only half of the spectrum is shown because of symmetry. \n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -448,8 +456,10 @@
     ":width: 100%\n",
     ":align: center\n",
     "\n",
-    "Plot of the gain at threshold vs coupling strength for various modes. The mode number N refers to a set of modes placed symmetrically about the Bragg frequency. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the gain at threshold vs coupling strength for various modes. The mode number N refers to a set of modes placed symmetrically about the Bragg frequency. \n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -517,8 +527,10 @@
     ":width: 100%\n",
     ":align: center\n",
     "\n",
-    "Plot of the gain at threshold vs coupling strength for various modes. The N=O mode corresponds to a mode at the Bragg frequency. The numbers N>O correspond to a set of modes symmetrically placed about the Bragg frequency. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the gain at threshold vs coupling strength for various modes. The N=O mode corresponds to a mode at the Bragg frequency. The numbers N>O correspond to a set of modes symmetrically placed about the Bragg frequency. \n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -584,8 +596,10 @@
     ":width: 100%\n",
     ":align: center\n",
     "\n",
-    "Plot of the spatial intensity distribution of the lowest order modes at various coupling levels. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the spatial intensity distribution of the lowest order modes at various coupling levels.\n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -600,8 +614,10 @@
     ":alt: spatial intensity distribution\n",
     ":align: center\n",
     "\n",
-    "Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=0.25$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=0.25$.\n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -719,8 +735,10 @@
     ":alt: spatial intensity distribution \n",
     ":align: center\n",
     "\n",
-    "Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=1$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=1$.\n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -786,8 +804,10 @@
     ":alt: spatial intensity distribution \n",
     ":align: center\n",
     "\n",
-    "Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=2$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=2$.\n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -853,8 +873,10 @@
     ":alt: spatial intensity distribution \n",
     ":align: center\n",
     "\n",
-    "Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=10$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=10$. \n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -869,8 +891,10 @@
     ":alt: spatial intensity distribution \n",
     ":align: center\n",
     "\n",
-    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =0.25$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =0.25$. \n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -937,8 +961,10 @@
     ":alt: spatial intensity distribution \n",
     ":align: center\n",
     "\n",
-    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =1$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =1$. \n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -1004,8 +1030,10 @@
     ":alt: spatial intensity distribution \n",
     ":align: center\n",
     "\n",
-    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =2$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =2$.\n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   },
   {
@@ -1071,8 +1099,10 @@
     ":alt: spatial intensity distribution \n",
     ":align: center\n",
     "\n",
-    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =10$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
-    "```"
+    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =10$. \n",
+    "```\n",
+    "\n",
+    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
    ]
   }
  ],
