Update for micropip

--- a/files/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
+++ b/files/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
@@ -17,6 +17,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "86d24ad5-42e7-4c1e-82aa-488e27a9ff9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only run this cell when running in jupyter lite\n",
+    "import micropip\n",
+    "await micropip.install(\"numpy\")\n",
+    "await micropip.install(\"matplotlib\")\n",
+    "await micropip.install(\"scipy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "f8fead38-878d-4203-9188-7f0b29eae822",
    "metadata": {
