--- a/files/NanoimprintedDFB.ipynb
+++ b/files/NanoimprintedDFB.ipynb
@@ -18,6 +18,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e59c54e9-8d9f-43e9-98be-4604798dbda2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only run this cell when running in jupyter lite\n",
+    "import micropip\n",
+    "await micropip.install(\"numpy\")\n",
+    "await micropip.install(\"matplotlib\")\n",
+    "await micropip.install(\"scipy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "id": "d30e9130-7494-4d94-bd45-ec248401d543",
    "metadata": {
