--- a/files/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
+++ b/files/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
@@ -149,7 +149,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated dispersion diagram for gain modulation for various gain to coupling parameter ratios",
+      "caption": "Calculated dispersion diagram for gain modulation for various gain to coupling parameter ratios, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik3"
      }
     },
@@ -205,9 +205,7 @@
    },
    "source": [
     "\n",
-    "% Dispersion diagram for gain modulation for various gain to coupling parameter ratios\n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "% Dispersion diagram for gain modulation for various gain to coupling parameter ratios\n"
    ]
   },
   {
@@ -234,7 +232,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated gain required for threshold vs frequency deviation from the Bragg condition for index modulation",
+      "caption": "Calculated gain required for threshold vs frequency deviation from the Bragg condition for index modulation, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik5c"
      }
     },
@@ -296,9 +294,7 @@
    },
    "source": [
     "\n",
-    "% Plot of the gain required for threshold vs frequency deviation from the Bragg condition for an index modulation. Only half of the spectrum is shown because of symmetry. \n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "% Plot of the gain required for threshold vs frequency deviation from the Bragg condition for an index modulation. Only half of the spectrum is shown because of symmetry. \n"
    ]
   },
   {
@@ -325,7 +321,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation",
+      "caption": "Calculated DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik7c"
      }
     },
@@ -374,11 +370,7 @@
    },
    "source": [
     "\n",
-    "\n",
-    "% Plot of the DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation. Only half of the spectrum is shown because of symmetry. \n",
-    "\n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "% Plot of the DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation. Only half of the spectrum is shown because of symmetry. \n"
    ]
   },
   {
@@ -395,7 +387,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated gain at threshold vs coupling strength for various modes",
+      "caption": "Calculated gain at threshold vs coupling strength for various modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik8c"
      }
     },
@@ -445,9 +437,7 @@
    "source": [
     "\n",
     "% Plot of the gain at threshold vs coupling strength for various modes. The mode number N refers to a set of modes placed symmetrically about the Bragg frequency. \n",
-    "\n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "\n"
    ]
   },
   {
@@ -464,7 +454,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated gain at threshold vs coupling strength for various modes",
+      "caption": "Calculated gain at threshold vs coupling strength for various modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik9c"
      }
     },
@@ -514,9 +504,7 @@
    },
    "source": [
     "\n",
-    "%Plot of the gain at threshold vs coupling strength for various modes. The N=O mode corresponds to a mode at the Bragg frequency. The numbers N>O correspond to a set of modes symmetrically placed about the Bragg frequency. \n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "%Plot of the gain at threshold vs coupling strength for various modes. The N=O mode corresponds to a mode at the Bragg frequency. The numbers N>O correspond to a set of modes symmetrically placed about the Bragg frequency. \n"
    ]
   },
   {
@@ -533,7 +521,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated gain at threshold vs coupling strength for various modes",
+      "caption": "Calculated gain at threshold vs coupling strength for various modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik10c"
      }
     },
@@ -579,27 +567,7 @@
     "user_expressions": []
    },
    "source": [
-    "% Plot of the spatial intensity distribution of the lowest order modes at various coupling levels.\n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "34d23d9f-88e6-4552-b8de-f1d6329c7be7",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "```{figure} images/Kogelnik11a.png\n",
-    ":name: Kogelnik11a\n",
-    ":alt: spatial intensity distribution\n",
-    ":align: center\n",
-    "\n",
-    "Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=0.25$.\n",
-    "```\n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "% Plot of the spatial intensity distribution of the lowest order modes at various coupling levels.\n"
    ]
   },
   {
@@ -616,7 +584,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes",
+      "caption": "Calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik11ac"
      }
     },
@@ -670,7 +638,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes",
+      "caption": "Calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik11bc"
      }
     },
@@ -719,9 +687,7 @@
    },
    "source": [
     "\n",
-    "% Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=1$.\n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "% Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=1$.\n"
    ]
   },
   {
@@ -738,7 +704,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes",
+      "caption": "Calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik11cc"
      }
     },
@@ -785,10 +751,7 @@
     "user_expressions": []
    },
    "source": [
-    "% Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=2$.\n",
-    "\n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "% Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=2$.\n"
    ]
   },
   {
@@ -805,7 +768,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes",
+      "caption": "Calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik11dc"
      }
     },
@@ -853,21 +816,23 @@
    },
    "source": [
     "% Plot of the spatial intensity distribution for the first three modes at $\\pi n_i L/\\lambda=10$. \n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c360783f-4777-4b80-b8b1-5048a106a546",
+   "id": "34d23d9f-88e6-4552-b8de-f1d6329c7be7",
    "metadata": {
     "user_expressions": []
    },
    "source": [
+    "```{figure} images/Kogelnik12a.png\n",
+    ":name: Kogelnik12a\n",
+    ":alt: spatial intensity distribution\n",
+    ":align: center\n",
     "\n",
-    "% Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =0.25$. \n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =0.25$. From {cite:p}`kogelnikCoupledWaveTheory1972`\n",
+    "```"
    ]
   },
   {
@@ -884,7 +849,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes at  L / 2 =1",
+      "caption": "Calculated spatial intensity distribution for the first three modes at  L / 2 =1, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik12bc"
      }
     },
@@ -932,10 +897,7 @@
     "user_expressions": []
    },
    "source": [
-    "\n",
-    "% Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =1$. \n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "% Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =1$. \n"
    ]
   },
   {
@@ -952,7 +914,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes at  L / 2 =2",
+      "caption": "Calculated spatial intensity distribution for the first three modes at  L / 2 =2, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik12cc"
      }
     },
@@ -1000,9 +962,7 @@
    },
    "source": [
     "\n",
-    "% Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =2$.\n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "% Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =2$.\n"
    ]
   },
   {
@@ -1067,15 +1027,9 @@
    },
    "source": [
     "\n",
-    "% ```{figure} images/Kogelnik12d.png\n",
-    "% :name: Kogelnik12d\n",
-    "% :alt: spatial intensity distribution \n",
-    "% :align: center\n",
     "\n",
     "% Plot of the spatial intensity distribution for the first three modes at $\\alpha L / 2 =10$. \n",
-    "% ```\n",
-    "\n",
-    "% from {cite:p}`kogelnikCoupledWaveTheory1972`   (to be added to the caption when cite from captions works in latex (how to use here the \\protect))"
+    "\n"
    ]
   }
  ],
