--- a/files/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
+++ b/files/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
@@ -72,9 +72,12 @@
      "shell.execute_reply": "2023-03-23T14:58:34.079322Z",
      "shell.execute_reply.started": "2023-03-23T14:58:33.651460Z"
     },
+    "jupyter": {
+     "source_hidden": true
+    },
     "mystnb": {
      "figure": {
-      "caption": "Calculated dispersion diagram for index modulation for various gain to coupling parameter ratios, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated dispersion diagram for index modulation for various gain to coupling parameter ratios, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik1"
      }
     },
@@ -149,7 +152,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated dispersion diagram for gain modulation for various gain to coupling parameter ratios, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated dispersion diagram for gain modulation for various gain to coupling parameter ratios, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik3"
      }
     },
@@ -199,17 +202,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b140f37a-a7e2-4a05-8ac7-41af94760d8e",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "\n",
-    "% Dispersion diagram for gain modulation for various gain to coupling parameter ratios\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "cdc19802-816a-47db-a714-b53020165af0",
    "metadata": {
     "user_expressions": []
@@ -232,7 +224,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated gain required for threshold vs frequency deviation from the Bragg condition for index modulation, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated gain required for threshold vs frequency deviation from the Bragg condition for index modulation.  Only half of the spectrum is shown because of symmetry, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik5c"
      }
     },
@@ -288,17 +280,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7557590d-94a0-4209-b8fb-b79f491f87d3",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "\n",
-    "% Plot of the gain required for threshold vs frequency deviation from the Bragg condition for an index modulation. Only half of the spectrum is shown because of symmetry. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b7f0cb5c-d5af-492e-aa7c-562ab42b3405",
    "metadata": {
     "user_expressions": []
@@ -309,19 +290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 126,
    "id": "932288bb-1f2a-464c-8a5e-76bec0c81bc7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-23T16:55:06.708015Z",
-     "iopub.status.busy": "2023-03-23T16:55:06.708015Z",
-     "iopub.status.idle": "2023-03-23T16:55:10.116712Z",
-     "shell.execute_reply": "2023-03-23T16:55:10.115712Z",
-     "shell.execute_reply.started": "2023-03-23T16:55:06.708015Z"
+     "iopub.execute_input": "2023-03-23T22:29:02.061012Z",
+     "iopub.status.busy": "2023-03-23T22:29:02.060650Z",
+     "iopub.status.idle": "2023-03-23T22:29:05.062388Z",
+     "shell.execute_reply": "2023-03-23T22:29:05.061385Z",
+     "shell.execute_reply.started": "2023-03-23T22:29:02.061012Z"
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation. Only half of the spectrum is shown because of symmetry, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik7c"
      }
     },
@@ -363,17 +344,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6966248d-fa0c-427b-9b8a-4bda77363f26",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "\n",
-    "% Plot of the DC gain required for threshold vs frequency deviation from the Bragg condition for gain modulation. Only half of the spectrum is shown because of symmetry. \n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 77,
    "id": "1e5ba4b1-ff3f-4ba3-9d79-446374917809",
@@ -387,7 +357,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated gain at threshold vs coupling strength for various modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated gain at threshold vs coupling strength for various modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik8c"
      }
     },
@@ -429,18 +399,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ad979cbc-310e-439d-a4a6-9ac6ba3102b3",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "\n",
-    "% Plot of the gain at threshold vs coupling strength for various modes. The mode number N refers to a set of modes placed symmetrically about the Bragg frequency. \n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 74,
    "id": "392367e5-309f-4577-ac25-cc99b0018ad1",
@@ -454,7 +412,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated gain at threshold vs coupling strength for various modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated gain at threshold vs coupling strength for various modes. The mode number N refers to a set of modes placed symmetrically about the Bragg frequency, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik9c"
      }
     },
@@ -504,24 +462,28 @@
    },
    "source": [
     "\n",
-    "%Plot of the gain at threshold vs coupling strength for various modes. The N=O mode corresponds to a mode at the Bragg frequency. The numbers N>O correspond to a set of modes symmetrically placed about the Bragg frequency. \n"
+    "\n",
+    "\n",
+    "## Spatial intensity distribution of the different modes\n",
+    "\n",
+    "In this section we plot a few of the spatial intensity distribution of the different lowest order modes. These intensity distributions are relevant when continuous operation is targeted, as they indicate how the electrical or optical pumping needs to be distributed to maintain lasing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 140,
    "id": "db9027e7-ffc3-4a01-971e-bcd8c11ae4a0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-23T16:48:42.892909Z",
-     "iopub.status.busy": "2023-03-23T16:48:42.891897Z",
-     "iopub.status.idle": "2023-03-23T16:48:43.256624Z",
-     "shell.execute_reply": "2023-03-23T16:48:43.256624Z",
-     "shell.execute_reply.started": "2023-03-23T16:48:42.892909Z"
+     "iopub.execute_input": "2023-03-23T22:44:11.323223Z",
+     "iopub.status.busy": "2023-03-23T22:44:11.323223Z",
+     "iopub.status.idle": "2023-03-23T22:44:11.655896Z",
+     "shell.execute_reply": "2023-03-23T22:44:11.655896Z",
+     "shell.execute_reply.started": "2023-03-23T22:44:11.323223Z"
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated gain at threshold vs coupling strength for various modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated  spatial intensity distribution of the lowest order modes at various coupling levels, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik10c"
      }
     },
@@ -561,16 +523,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8c7a374a-064d-4e5d-8446-8aeeb6633a91",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "% Plot of the spatial intensity distribution of the lowest order modes at various coupling levels.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 69,
    "id": "7d2c9010-5f5f-416a-b3c4-641b9fc4155a",
@@ -584,7 +536,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik11ac"
      }
     },
@@ -638,7 +590,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik11bc"
      }
     },
@@ -704,7 +656,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik11cc"
      }
     },
@@ -768,7 +720,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik11dc"
      }
     },
@@ -837,19 +789,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 123,
    "id": "34e7f8db-61ab-4bac-8cb1-9256eaaa91d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-23T16:43:57.987140Z",
-     "iopub.status.busy": "2023-03-23T16:43:57.987140Z",
-     "iopub.status.idle": "2023-03-23T16:43:58.257879Z",
-     "shell.execute_reply": "2023-03-23T16:43:58.257381Z",
-     "shell.execute_reply.started": "2023-03-23T16:43:57.987140Z"
+     "iopub.execute_input": "2023-03-23T22:19:04.557581Z",
+     "iopub.status.busy": "2023-03-23T22:19:04.557581Z",
+     "iopub.status.idle": "2023-03-23T22:19:04.872123Z",
+     "shell.execute_reply": "2023-03-23T22:19:04.871170Z",
+     "shell.execute_reply.started": "2023-03-23T22:19:04.557581Z"
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes at  L / 2 =1, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik12bc"
      }
     },
@@ -884,8 +836,8 @@
     "ax[0].set_xlim(-0.5,0.5)\n",
     "ax[0].tick_params(direction='in')\n",
     "ax[0].legend(title='N =');\n",
-    "ax[1].imshow(mpimg.imread('images/Kogelnik12b.png'))\n",
     "ax[1].axis('off');\n",
+    "ax[1].imshow(mpimg.imread('images/Kogelnik12b.png'));\n",
     "ax[1].set(xticks=[], yticks=[]);"
    ]
   },
@@ -914,7 +866,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes at  L / 2 =2, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
+      "caption": "Left: calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik12cc"
      }
     },
@@ -979,7 +931,7 @@
     },
     "mystnb": {
      "figure": {
-      "caption": "Calculated spatial intensity distribution for the first three modes at  L / 2 =10",
+      "caption": "Left: calculated spatial intensity distribution for the first three modes, right: corresponding graph from from {cite:p}`kogelnikCoupledWaveTheory1972`",
       "name": "Kogelnik12dc"
      }
     },
