deploy: 4e0ed6be4422de177e466ec77403f7024660ad24

--- a/Latex/python.tex
+++ b/Latex/python.tex
@@ -88,7 +88,7 @@
 \title{Coupled Wave Theory of Distributed Feedback Lasers}
 \date{Mar 23, 2023}
 \release{}
-\author{Jan Genoe, Iakov Goldberg, Nirav Annavarapu, Robert Gehlhaar}
+\author{Jan Genoe, Iakov Goldberg, Nirav Annavarapu}
 \newcommand{\sphinxlogo}{\sphinxincludegraphics{logo.png}\par}
 \renewcommand{\releasename}{}
 \makeindex
