--- a/files/DFB.bib
+++ b/files/DFB.bib
@@ -27,3 +27,16 @@
   urldate = {2017-08-24},
   langid = {english}
 }
+@article{iakovgoldbergMultimodeLasingAllSolutionProcessed2023,
+  title = {Multimode {{Lasing}} in {{All-Solution-Processed UV-Nanoimprinted Distributed Feedback MAPbI3 Perovskite Waveguides}}},
+  author = {{Iakov Goldberg} and {Nirav Annavarapu} and Leitner, Simon and Elkhouly, Karim and Han, Fei and Verellen, Niels and Kuna, Tibor and Qiu, Weiming and Rolin, Cedric and Genoe, Jan and Gehlhaar, Robert and Heremans, Paul},
+  year = {2023},
+  month = may,
+  journal = {ACS Photonics},
+  volume = {10},
+  number = {5},
+  pages = {1591--1600},
+  publisher = {{American Chemical Society}},
+  doi = {10.1021/acsphotonics.3c00206},
+  abstract = {In this work, we present an all-solution fabrication approach for external second-order 1D distributed feedback (DFB) gratings using soft UV-nanoimprint lithography (UV-NIL) above archetypical methylammonium lead iodide (MAPbI3) perovskite films. This high-throughput method can be carried out in an ambient environment and requires only slightly elevated temperatures as low as 70 \textdegree C, gentle imprint pressure, and the use of compatible UV-NIL resin. Under stripe-shaped optical excitation, we observe simultaneously occurring optical phenomena in our high-gain strong-scattering perovskite films, namely amplified spontaneous emission, random lasing, and 1D DFB lasing. In pursuit of distinguishing these mechanisms, we explore far-field emission patterns and output polarization. Additionally, the DFB lasing is hardly attenuated when a thin absorbing indium tin oxide (ITO) film, commonly used as an electrode in fully contacted electrical devices, is inserted between the perovskite film and the DFB grating. As a result, we reproducibly achieve single and multimode, low-threshold (below 100 {$\mu$}J{$\cdot$}cm\textendash 2), narrow linewidth (below 0.2 nm), and strongly polarized (extinction ratio above 50) optically pumped DFB lasing for MAPbI3 waveguides with and without an adjacent ITO layer. We believe that the proposed resonator integration approach can be extended toward complete electrically active devices, enabling an alternative integration scheme to achieve current-injection lasing.}
+}
