--- a/files/NanoimprintedDFB.ipynb
+++ b/files/NanoimprintedDFB.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "This chapter comprises simulations from the manuscript: \n",
     "\n",
-    "Iakov Goldberg, Nirav Annavarapu, Simon Leitner, Karim Elkhouly, Fei Han, Tibor Kuna, Weiming Qiu, Cedric Rolin, Jan Genoe, Robert Gehlhaar and Paul Heremans, *\"Multimode Lasing in All-Solution-Processed UV-Nanoimprinted Distributed Feedback MAPbI{sub}`3` Perovskite Waveguides\"*, submitted manuscript\n",
+    "Iakov Goldberg, Nirav Annavarapu, Simon Leitner, Karim Elkhouly, Fei Han, Niels Verhellen, Tibor Kuna, Weiming Qiu, Cedric Rolin, Jan Genoe, Robert Gehlhaar and Paul Heremans, *\"Multimode Lasing in All-Solution-Processed UV-Nanoimprinted Distributed Feedback MAPbI{sub}`3` Perovskite Waveguides\"*, {cite:p}`iakovgoldbergMultimodeLasingAllSolutionProcessed2023`\n",
     "\n",
     "The calculation of the modes is done in accordance to {cite:p}`kogelnikCoupledWaveTheory1972`. "
    ]
